attempt to stop bg from cutting off on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@
 }
 
 body {
+	webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
